Refactor code for good design
move config to utils and enviroment
remove unnecessary parameter in "reserve table" function
